--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "getkeymanager/php-sdk",
+  "version": "3.0.0",
   "description": "Official PHP SDK for License Management Platform API",
   "type": "library",
   "keywords": [
